fixed dark mode

--- a/src/assets/scss/main/_global.scss
+++ b/src/assets/scss/main/_global.scss
@@ -3,7 +3,7 @@
 
 :root {
   --body-font: "Inter", sans-serif;
-  --body-color: #f9fbfc;
+  --body-color: #f3f3f3;
   --primary-color: #1a0c02;
   --secondary-color: #f3f3f3;
   --border-color: #2b3b58;
@@ -38,10 +38,10 @@
   --body-color: #000000;
   --primary-color: #db8c3d;
   --secondary-color: #f3f3f3;
-  --border-color: #192734;
-  --bs-border-color: #192734;
-  --border-1st-color: #192734;
-  --border-2nd-color: #192734;
+  --border-color: #1c1c1c;
+  --bs-border-color: #1c1c1c;
+  --border-1st-color: #1c1c1c;
+  --border-2nd-color: #1c1c1c;
   --icon-color: #888888;
   --icon-alt-color: #a6acb6;
   --heading-1st-color: #ffffff;
@@ -51,11 +51,11 @@
   --para-4th-color: #ffffff;
   --para-5th-color: #ffffff;
   --para-6th-color: #a6acb6;
-  --box-1st-color: #283846;
-  --box-2nd-color: #192734;
+  --box-1st-color: #1c1c1c;
+  --box-2nd-color: #1c1c1c;
   --btn-1st-color: #1d9bf0;
   --btn-2nd-color: #185e54;
-  --section-1st-color: #18222b;
+  --section-1st-color: #323232;
   --box-shadow: 0px 4px 26px rgba(66, 66, 66, 0.25);
   --box-2nd-shadow: 0px 4px 26px rgba(66, 66, 66, 0.25);
   --hero-section-bg: #000428bf;
